# SteelEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VulkanRenderSE.drawio  imgui.ini
include/: CMakeLists.txt
include/Application/: Application.h  CMakeLists.txt
include/AssetManager/: AssetItem.h  AssetManager.h  CMakeLists.txt  IAssetItem.h  IAssetManager.h  Object3D_Asset.h
include/AssetManager/Events/: LoadAssetEvent.h
include/ConsoleSystem/: CMakeLists.txt  ConsoleSystem.h  ICommand.h  IConsoleSystem.h
include/ConsoleSystem/Commands/: TestCommand.h  TestCommand2.h
include/Core/: Attribs.h  CMakeLists.txt  Core.h  DeltaTime.h  GetCompileConfigEvent.h  ICore.h  IDeltaTime.h  IReflectionModule.h  NCE_ReflectionModule.h  Platform.h  PythonScriptableInheritance.h  RCS_ReflectionModule.h  ReflectionAttributes.h  Result.h  Server.h  SomeReflectionModule.h  Type.h  UserInterfaceInheritance.h  WindowInheritance.h
include/Core/ReflectionModules/: CasterReflectionModule.h  NCE_ReflectionModule.h  NaiveEventReflectionModule.h  RCS_ReflectionModule.h
include/Editor/: CMakeLists.txt
include/Editor/ImGUI/: ImGUI_Editor.h  OpenGL_Context.h  ProjectInfo.h  SelectableProject.h  VulkanContext.h  Window.h
include/EditorComponents/: CMakeLists.txt
include/EditorComponents/ImGUI/: UserInterface.h
include/Engine/: CMakeLists.txt
include/Event/: CMakeLists.txt  EventManager.h  EventObserver.h  GlobalEvent.h  GlobalEventTracker.h  IEventManager.h  InternalEventChannel.h  LocalEvent.h  NaiveEvent.h  globalevent.h  internaleventchannel.h  localevent.h
include/FileSystem/: CMakeLists.txt  FileSystem.h  IFileSystem.h
include/FileWatcher/: CMakeLists.txt  FileWatcher.h
include/Graphics/: CMakeLists.txt  FramebufferAttachment.h  FramebufferStatus.h  IBuffer.h  IContext.h  IEditor.h  IFramebuffer.h  IMaterial.h  IMesh.h  IModel.h  IRenderer.h  IRendererVulkan.h  IShader.h  ITexture.h  IndexBuffer.h  Material.h  Model.h  Renderer.h  Vertex.h  VertexBuffer.h
include/Graphics/Events/: AddModelEvent.h  (+1 more)
include/HotReloader/: CMakeLists.txt  IRuntimeObject.h  IRuntimeReloader.h  ISerializedValue.h  ISerializer.h  InheritanceTrackKeeper.h  NonReloadableITK.h  ObjectAge.h  ReloadableInheritanceTrackKeeper.h  RuntimeReloader.h  Serializer.h  SwapStage.h
include/ImGUI_Editor/: ChangeSceneEvent.h  IContext.h  ImGUI_Editor.h  ImGUI_Program.h  OpenGL_Context.h  ReflectionAttribs.h  SceneType.h  SelectableProject.h  VulkanContext.h  Window.h  WindowType.h
include/InformationTracker/: CMakeLists.txt  IInformationTracker.h  ISystemTracker.h  InformationTracker.h  SystemTracker.h
include/Input/: CMakeLists.txt
include/Logger/: CMakeLists.txt  ILogger.h  LogData.h  LogDispatcher.h  Logger.h
include/Math/: CMakeLists.txt  Camera.h  Transform.h
include/Memory/: Allocator.h  CMakeLists.txt  FixedQueueAllocator.h  FixedStackAllocator.h  FixedVectorAllocator.h  Iterator.h  LinearAllocator.h  PointerMath.h  PoolAllocator.h  ProxyAllocator.h  StackAllocator.h  StackLinkedList.h
include/MemoryTracker/: CMakeLists.txt  IMemoryTracker.h  MemoryTracker.h
include/Module/: CMakeLists.txt  Module.h  ModuleDetails.h  ModuleExport.h  VirtualModule.h
include/ModuleManager/: CMakeLists.txt  IModuleManager.h  ModuleManager.h
include/Networking/: CMakeLists.txt  Client.h  ClientInfo.h  ClientThread.h  Config.h  GetNetCommandEvent.h  GetNetworkInfo.h  INetwork.h  INetworkCommand.h  INetworkManager.h  NetworkCommands.h  NetworkManager.h  NoneNetCommandEvent.h  SendMessageEvent.h  Server.h  SwapModuleNetCommandEvent.h
include/Platform/: CMakeLists.txt
include/PlatformDll/: CMakeLists.txt  containers.h  types.h  utils.h
include/Profiler/: CMakeLists.txt  IManager.h  Manager.h  ScopeTimer.h  SimpleProfiler.h
include/PythonCore/: CMakeLists.txt  CasterReflectionModule.h  IPythonCore.h  IScript.h  PythonCore.h  ResultConverter.h  Script.h  Scriptable.h
include/PythonProcess/: IPythonProcess.h  PythonProcess.h
include/ReflectionGenerator/: CMakeLists.txt
include/Rendering/: IRenderer.h  UniformBufferObject.h  Vertex.h  VulkanRenderer.h
include/RuntimeCompiler/: CMakeLists.txt  IRuntimeCompiler.h  IRuntimeObject.h  ISerializedValue.h  ISerializer.h  RecompiledEvent.h  RuntimeCompiler.h  Serializer.h  SwapModuleEvent.h
include/RuntimeDatabase/: CMakeLists.txt  IRuntimeDatabase.h  RuntimeDatabase.h
include/RuntimeReflection/: CMakeLists.txt  FunctionArgument.h  IFunctionArgument.h  IProxyMethod.h  IReflectionConstructor.h  IReflectionData.h  IReflectionEnumeration.h  IReflectionGenerator.h  IReflectionInheritance.h  IReflectionMethod.h  IReflectionProperty.h  Lexer.h  Macro.h  MetaDataImplementation.h  MetaDataInfo.h  NoTupleInvoke.h  Parser.h  ProxyMethod.h  Reflection.h  ReflectionAttributes.h  ReflectionConstructor.h  ReflectionData.h  ReflectionEnumElement.h  ReflectionEnumeration.h  ReflectionGenerator.h  ReflectionGeneratorMacros.h  ReflectionInheritance.h  ReflectionProperty.h  ReflectionRecorder.h  Variant.h
include/RuntimeReflectionDll/: CMakeLists.txt  RuntimeReflection.h
include/SceneSystem/: CMakeLists.txt  ISceneManager.h  SceneManager.h
include/Serialization/: CMakeLists.txt  JsonSerialization.h  Serialization.h  byte_buffer.h
include/StaticHelper/: CMakeLists.txt  IReflectionDataHelper.h  StaticHelper.h
include/Subprocess/: CMakeLists.txt  ISubprocess.h  Subprocess.h
include/Utils/: CMakeLists.txt  ITuple.h  Json.h  Network.h  Options.h  Reflection.h  TimeCheck.h  Tuple.h  TupleMaker.h  Utils.h  Window.h
include/VirtualProject/: CMakeLists.txt  CreateNewProjectEvent.h  FileTemplateCreator.h  GetLoadedProjectPathEvent.h  IVirtualProject.h  IVirtualProjectVisualizer.h  LoadProjectEvent.h  LoadedProjectEvent.h  ProjectStructure.h  VirtualProject.h  VirtualProjectVisualizer.h
include/VisualScript/: CMakeLists.txt  INode.h  INodeData.h  IPin.h  IPinData.h  IPinFunction.h  NodeTemplate.h  VisualScript.h
include/Window/: CMakeLists.txt  IWindow.h  MaximizedEvent.h  MinimizedEvent.h  OpenGL_Window.h  ResizeEvent.h  VulkanWindow.h
(+525 files in other folders)
